--- a/flexbox.html
+++ b/flexbox.html
@@ -18,18 +18,50 @@
             <div class='date'>Aug 14, 2016</div>
             <!-- Grouped -->
             <div class="links">
+
                 <div class='signup'>Sign Up</div>
                 <div class='login'>Login</div>
+
             </div>
 
         </div>
     </div>
     <!-- Add a header underneath our menu -->
     <div class='header-container'>
+
         <div class='header'>
+
             <div class='subscribe'>Subscribe &#9662;</div>
             <div class='logo'><img src='images/awesome-logo.svg' /></div>
             <div class='social'><img src='images/social-icons.svg' /></div>
+
+        </div>
+
+    </div>
+
+
+    <!-- Add a row of photos to flexbox.html so that we have something to work with. 
+ This should go inside of <body>, under the .header-container element: -->
+    <div class='photo-grid-container'>
+
+        <div class='photo-grid'>
+
+            <div class='photo-grid-item first-item'>
+                <img src='images/one.svg' />
+            </div>
+            <div class='photo-grid-item'>
+                <img src='images/two.svg' />
+            </div>
+            <div class='photo-grid-item'>
+                <img src='images/three.svg' />
+            </div>
+            <div class='photo-grid-item'>
+                <img src='images/four.svg' />
+            </div>
+            <div class='photo-grid-item last-item'>
+                <img src='images/five.svg' />
+            </div>
+
         </div>
     </div>
 
