Finished the tutorial on flexbox.

--- a/flexbox.html
+++ b/flexbox.html
@@ -17,12 +17,12 @@
             <!-- Flex items -->
             <div class='date'>Aug 14, 2016</div>
             <!-- Grouped -->
-            <div class="links">
+            <!-- <div class="links"> -->
 
                 <div class='signup'>Sign Up</div>
                 <div class='login'>Login</div>
 
-            </div>
+            <!-- </div> -->
 
         </div>
     </div>
@@ -68,7 +68,7 @@
 
         </div>
     </div>
-    
+
     <div class='footer'>
         <div class='footer-item footer-one'></div>
         <div class='footer-item footer-two'></div>
